--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -73,6 +73,7 @@
     vals.put(6, "test6");
     client.data_setUserPreferences(vals, false);
 
+
     //retrieve all the values at once
     System.out.println("All current preferences:");
     prefs = client.data_getUserPreferences();
@@ -82,6 +83,8 @@
     
     //set several new preference values at once, *removing* any existing values   
     client.data_setUserPreferences(vals, true);
+    
+    //retrieve all the values at once (to show that anything not in 'vals' is now gone) 
     System.out.println("All current preferences:");
     prefs = client.data_getUserPreferences();
     for (Integer key : prefs.keySet()) {
