--- a/wiki/Dashboard.wiki
+++ b/wiki/Dashboard.wiki
@@ -19,8 +19,8 @@ http://64.81.51.104:54321/facebook/javadoc/index.html
 ||*64-bit UID's*||Yes||No||No||
 ||*'Pair' implemented correctly*||Yes||Yes||No||
 ||*Support feed_templatizedAction*||Yes, since v1.1||Yes||No||
-||*Support marketplace API*||Yes, since v1.3||Yes||No||
 ||*Support data.setUserPreference(s)*||Yes, since v1.2||No||No||
 ||*Support data.getUserPreference(s)*||Yes, since v1.2||No||No||
 ||*Support SMS API*||Yes, since v1.2||No||No||
-||*Support All non-beta API calls*||Yes||No (missing fbml_setRefHandle)||No||
+||*Support Marketplace API*||Yes, since v1.3||Yes||No||
+||*Support All non-beta API calls*||Yes, since v1.3||No (missing fbml_setRefHandle)||No||
