--- a/wiki/Releases.wiki
+++ b/wiki/Releases.wiki
@@ -1,13 +1,23 @@
-#summary One-sentence summary of this page.
+#summary This page contains information about which SVN revisions correspond to which official release version.
 
-= Introduction =
+===== Release Versions =====
+You can use the following table to determine which SVN revision is associated with a given release.
 
-Add your content here.
 
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+||*Release Version*||*SVN Revision*||
+||1.8-beta||r179||
+||1.8-alpha||r169||
+||1.7.4||r154||
+||1.7.3||r145||
+||1.7.2||???||
+||1.7.1||r132||
+||1.7||r126||
+||1.6.2||r115||
+||1.6.1||r107||
+||1.6||r100||
+||1.5.2||r88||
+||1.5.1||r82||
+||1.5||r80||
+||1.4||r55||
+||1.3||r37||
+||1.2||Initial version||
