--- a/wiki/Dashboard.wiki
+++ b/wiki/Dashboard.wiki
@@ -1,7 +1,13 @@
 #summary This page contains a top-level overview of the current project status.
 
-===== Current project version =====
-1.8-final
+===== Current project versions =====
+Released:
+    1.8.0
+
+In Development:
+    1.8.1-SNAPSHOT
+
+(Look at MavenSupport to learn how to configure your pom.xml.)
 
 
 ===== Javadoc =====
