Edited wiki page through web user interface.

--- a/wiki/MavenSupport.wiki
+++ b/wiki/MavenSupport.wiki
@@ -1,3 +1,5 @@
+how to get the latest 2.0.0-SNAPSHOT release.
+
 = Maven Support =
 
 If you are maintaining your dependencies through Maven Repositories,
