Edited wiki page through web user interface.

--- a/wiki/MavenSupport.wiki
+++ b/wiki/MavenSupport.wiki
@@ -17,7 +17,7 @@ latest version is.
 Add this repository to your project's pom:
 
     <repository>
-      <id>mrepo-happyfern-snapshot</id>
+      <id>mrepo-happyfern</id>
       <url>http://mrepo.happyfern.com/maven2/</url>
     </repository>
 
