--- a/wiki/MavenSupport.wiki
+++ b/wiki/MavenSupport.wiki
@@ -1,4 +1,4 @@
-#summary how to get the latest 2.0.0-SNAPSHOT release.
+#summary how to get the latest releases.
 
 = Maven Support =
 
@@ -24,9 +24,9 @@ Add this repository to your project's pom:
 Then you have access to this dependency:
 
     <dependency>
-      <groupId>com.facebook.api</groupId>
+      <groupId>com.google.code.facebookapi</groupId>
       <artifactId>facebook-java-api</artifactId>
-      <version>1.8.0</version>
+      <version>2.0.1</version>
     </dependency> 
 
 == Snapshots Repository ==
@@ -47,7 +47,7 @@ Add this repository to your project's pom:
 Then you have access to this dependency:
 
     <dependency>
-      <groupId>com.facebook.api</groupId>
+      <groupId>com.google.code.facebookapi</groupId>
       <artifactId>facebook-java-api</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.2-SNAPSHOT</version>
     </dependency> 
