--- a/wiki/Releases.wiki
+++ b/wiki/Releases.wiki
@@ -2,16 +2,17 @@
 
 === Maven Support ===
 
-I am encouraging people to use the maven repository, through Maven, Ivy or any other compatible build tool.  This will allow you to get easy access to development builds, final releases, and transitive dependencies easily.  [MavenSupport]
+I am encouraging people to use the maven repository, through Maven, Ivy or any other compatible build tool.  This will allow you to get easy access to development builds, final releases, and transitive dependencies easily.  Go look at the [MavenSupport] page for some information.
 
 === Releases ===
 
 We currently have 3 releases available under our [http://code.google.com/p/facebook-java-api/downloads/list Downloads] page.  I'll explain the differences here:
 
-
+  * 2.0.2
+    * Just basic bug fixes and api enhancements, since Facebook keeps changing their apis.
   * 2.0.1
-    *
+    * We changed the root package for all classes from "com.facebook.api" to "com.google.code.facebookapi".  This was to separate us from "com.facebook" since we are not facebook officially.  Also this allowed us to deploy our jar files into the Maven Central Repository, thus making it easier for everyone to use our library.
   * 2.0.0
-    *
+    * After I took over as maintainer I wanted to start moving the code forward, but without drastic changes.  That's what 2.0.0 is about, the closest to 1.8.x code, but with my own 
   * 1.8.1
-    *
+    * old deprecated code base, please upgrade!
