--- a/wiki/MavenSupport.wiki
+++ b/wiki/MavenSupport.wiki
@@ -8,34 +8,26 @@ if you have any questions or feedback!
 
 == Releases Repository ==
 
-We are working to get our releases into the Maven Central Repository,
-but for now please add the following repository and dependency into
-your pom.xml.  Please look at Dashboard if you are wondering what the
-latest version is.
+All of our releases will be deployed to the Maven Central Repository, starting with the 2.0.1 release.  So all you have to do is add the appropriate dependency to your pom:
 
-
-Add this repository to your project's pom:
-
-    <repository>
-      <id>mrepo-happyfern</id>
-      <url>http://mrepo.happyfern.com/maven2/</url>
-    </repository>
-
-Then you have access to this dependency:
-
+{{{
     <dependency>
       <groupId>com.google.code.facebookapi</groupId>
       <artifactId>facebook-java-api</artifactId>
-      <version>2.0.1</version>
-    </dependency> 
+      <version>2.0.2</version>
+    </dependency>
+}}}
 
 == Snapshots Repository ==
+
+A Snapshot is what Maven calls a development build.  For example, trunk is at version "2.0.3-SNAPSHOT".  And we can do builds and changes against that snapshot version number as often as required.  Once we make an official release, "2.0.3", then trunk would become "2.0.4-SNAPSHOT".  This states that a Snapshot release is a development release, and can change from under you.  An actual release is final and can never change after it's been released, so the "2.0.3" jar file will never change, and if we have to make a small fix or something we might release "2.0.3.1" or tell everyone to avoid "2.0.3" and use the next available release.
 
 The Maven Central Repository will not hold Snapshot releases, so we
 have to maintain our own repository for this purpose.
 
 Add this repository to your project's pom:
 
+{{{
     <repository>
       <id>mrepo-happyfern-snapshot</id>
       <url>http://mrepo.happyfern.com/maven2-snapshot/</url>
@@ -43,11 +35,14 @@ Add this repository to your project's pom:
         <enabled>true</enabled>
       </snapshots>
     </repository>
+}}}
 
 Then you have access to this dependency:
 
+{{{
     <dependency>
       <groupId>com.google.code.facebookapi</groupId>
       <artifactId>facebook-java-api</artifactId>
-      <version>2.0.2-SNAPSHOT</version>
-    </dependency> 
+      <version>2.0.3-SNAPSHOT</version>
+    </dependency>
+}}}
