--- a/wiki/XSDSchemas.wiki
+++ b/wiki/XSDSchemas.wiki
@@ -10,5 +10,4 @@ A Maven plugin is used to generate the Java bindings. The details are in faceboo
 
 facebook.xsd is published at http://api.facebook.com/1.0/facebook.xsd and defines the response formats. Because Facebook provides a REST API, the request parameters for each method call do not have an XML schema or similar; instead we rely on the API documentation at http://wiki.developers.facebook.com/index.php/API
 
-Could someone who knows the process please comment:
-What's the purpose of the facebook.xsd.diff when we could relatively easily create a diff (patch) whenever we want to. Is someone looking from Facebook looking at the discrepancies?
+facebook.xsd.diff is kept up to date so that Facebook developers will be able to see at a glance what has had to change from facebook.xsd to get JAXB working. Hopefully bug http://bugs.developers.facebook.com/show_bug.cgi?id=3780 will be worked on and fixed by the Facebook team.
