--- a/wiki/XSDSchemas.wiki
+++ b/wiki/XSDSchemas.wiki
@@ -10,4 +10,4 @@ A Maven plugin is used to generate the Java bindings. The details are in faceboo
 
 facebook.xsd is published at http://api.facebook.com/1.0/facebook.xsd and defines the response formats. Because Facebook provides a REST API, the request parameters for each method call do not have an XML schema or similar; instead we rely on the API documentation at http://wiki.developers.facebook.com/index.php/API
 
-facebook.xsd.diff is kept up to date so that Facebook developers will be able to see at a glance what has had to change from facebook.xsd to get JAXB working. Hopefully bug http://bugs.developers.facebook.com/show_bug.cgi?id=3780 will be worked on and fixed by the Facebook team.
+facebook.xsd.diff is kept up to date so that Facebook developers will be able to see at a glance what has had to change from facebook.xsd to get JAXB working. Hopefully bug http://bugs.developers.facebook.com/show_bug.cgi?id=3780 will be worked on and fixed by the Facebook team. Furthermore, if we get a new version of facebook.xsd supplied by Facebook it should be trivial to create a new version of schema.xsd which contains both the updates from Facebook and our fixes on top.
