--- a/wiki/HowToDeploy.wiki
+++ b/wiki/HowToDeploy.wiki
@@ -46,7 +46,9 @@ Once you can connect with OpenSSH, you'll hopefully be ready to go with Maven.
 
 =Releasing to production Maven repository=
 
-A) Maven deploy
+==A) Maven deploy==
+
+===release:prepare===
 
 From the parent directory (with the parent pom.xml in it) issue the command:
 
@@ -66,7 +68,7 @@ mvn release:prepare
 
 The [http://maven.apache.org/plugins/maven-release-plugin/index.html maven-release-plugin documentation] describes the release:rollback goal. The release:prepare goal kept backups of your old pom.xml files. The release:rollback goal checks these backups in over the top of the ones that were checked in to move onto the next development version. So, the trunk of source control ends up like it was before. However, the tag that you've created will still be there. 
 
-
+===release:perform===
 
 mvn release:perform
  - it will do a full build and deploy into repository
@@ -76,33 +78,33 @@ mvn release:perform
 
 NOTE: Include information here about how you can perform a release that does not become the LATEST or RELEASE version in Maven. For example, if you want to produce a Beta release to be made available in the main repository but don't want users to be automatically upgraded if they're asking for the latest release.
 
-B) Make up distribution zip file
+==B) Make up distribution zip file==
 
 cd /tags/release-#####
 mvn clean install site deploy
- - do another clean install
- - build the site (for dist)
- - do another deploy
+  * do another clean install
+  * build the site (for dist)
+  * do another deploy
 
 cd facebook-java-api
 mvn assembly:assembly
- - build the assembly (zip distribution file)
+  * build the assembly (zip distribution file)
 
- - DONE, you should see a message near the end like so:
-   [INFO] Building zip: /local/fern/work/facebook-java-api/tags/release-#####/facebook-java-api/target/facebook-java-api-#####-bin.zip
+  * DONE, you should see a message near the end like so:
+    * [INFO] Building zip: /local/fern/work/facebook-java-api/tags/release-#####/facebook-java-api/target/facebook-java-api-#####-bin.zip
 
-C) Upload to Google Code
- - upload to: http://code.google.com/p/facebook-java-api/downloads/list
-  - set as Featured (to show up on project homepage)
-  - un feature old release (to remove from project homepage)
- - maybe mark a really old release as deprecated ( so it will not show up by default )
-
-
-D) Update front page
- - update: http://code.google.com/p/facebook-java-api/admin
-  - to say we have new release..
+==C) Upload to Google Code==
+  * upload to: http://code.google.com/p/facebook-java-api/downloads/list
+  * set as Featured (to show up on project homepage)
+  * un feature old release (to remove from project homepage)
+  * maybe mark a really old release as deprecated ( so it will not show up by default )
 
 
-E) Update wiki
- - easier to do this through svn.
- - simply search for the previous version, and edit it as appropriate, then checkin all changes.
+==D) Update front page==
+  * update: http://code.google.com/p/facebook-java-api/admin
+    * to say we have new release..
+
+
+==E) Update wiki==
+  * easier to do this through svn.
+  * simply search for the previous version, and edit it as appropriate, then checkin all changes.
