--- a/wiki/HowToDeploy.wiki
+++ b/wiki/HowToDeploy.wiki
@@ -79,7 +79,7 @@ Note that I've tried adding the following to the parent pom.xml so that it promp
 
 This "dry run" should have boosted your confidence that the process is going to go well. So, now do the release preparation for real:
 
-mvn release:prepare
+mvn release:prepare -Dresume=false
   * this will actually create a directory in source control under /tags/release-#####
   * it will check in new versions of all your pom.xml files specifying their versions as what you said was your "next development version" with -SNAPSHOT appended.
 
