--- a/wiki/HowToDeploy.wiki
+++ b/wiki/HowToDeploy.wiki
@@ -83,6 +83,8 @@ mvn release:prepare -Dresume=false
   * this will actually create a directory in source control under /tags/release-#####
   * it will check in new versions of all your pom.xml files specifying their versions as what you said was your "next development version" with -SNAPSHOT appended.
 
+If you get any errors about "file already exists" then you may be suffering from [http://jira.codehaus.org/browse/MRELEASE-409 bug MRELEASE-409]. You can solve the problem by issuing an _svn update_ before retrying the release:prepare.
+
 ===If something is wrong===
 
 The [http://maven.apache.org/plugins/maven-release-plugin/index.html maven-release-plugin documentation] describes the *release:rollback* goal. The release:prepare goal kept backups of your old pom.xml files. The release:rollback goal checks these backups in over the top of the ones that were checked in to move onto the next development version. So, the trunk of source control ends up like it was before. However, the tag that you've created will still be there unless you were just doing a dry run. You may also find the release:clean goal useful if you want to start afresh.
