--- a/wiki/HowToDeploy.wiki
+++ b/wiki/HowToDeploy.wiki
@@ -1,4 +1,5 @@
 #summary Deploying SNAPSHOT and release builds to Maven repositories and creating .zip packages to be posted onto this site as featured downloads.
+#sidebar TableOfContents
 
 =Getting SNAPSHOT releases=
 
